WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
78394
AtomicMarkupTokenBase::initializeAttributes should not create a StringImpl if it doesn't need to
https://bugs.webkit.org/show_bug.cgi?id=78394
Summary
AtomicMarkupTokenBase::initializeAttributes should not create a StringImpl if...
Eric Seidel (no email)
Reported
2012-02-10 15:39:28 PST
AtomicMarkupTokenBase::initializeAttributes should not create a StringImpl if it doesn't need to
Attachments
Patch
(1.89 KB, patch)
2012-02-10 15:42 PST
,
Eric Seidel (no email)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Seidel (no email)
Comment 1
2012-02-10 15:42:34 PST
Created
attachment 126596
[details]
Patch
WebKit Review Bot
Comment 2
2012-02-10 18:35:36 PST
Comment on
attachment 126596
[details]
Patch Clearing flags on attachment: 126596 Committed
r107468
: <
http://trac.webkit.org/changeset/107468
>
WebKit Review Bot
Comment 3
2012-02-10 18:35:40 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug