AtomicMarkupTokenBase::initializeAttributes should not create a StringImpl if it doesn't need to https://bugs.webkit.org/show_bug.cgi?id=78394

Reviewed by Adam Barth.

On the very next line is passes value to Attribute::create which takes
an AtomicString, so this code was just allocating a StringImpl (every time)
only to (much of the time) just release that StringImpl on the next line
when it got the AtomicString instead.

I discovered this while looking at DOM/Events.html, but it's unclear
if this fix actually makes that benchmark faster.

* xml/parser/MarkupTokenBase.h:
(WebCore::::initializeAttributes):


Canonical link: https://commits.webkit.org/95330@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107468 268f45cc-cd09-0410-ab3c-d52691b4dbfc